test/deca/context/valid/addition.deca
{
    int x = 1;
    float f;
    /* x doit être convertis en float */
    f = x + 4.5f;
}